--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "vmdbback",
   "version": "1.0.0",
+  "type": "module",
   "main": "index.js",
   "scripts": {
     "start": " npx tsc && node dist/app.js",
@@ -16,6 +17,7 @@
   },
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.17.1",
     "mongodb": "^6.7.0"
   }
