--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
     "compilerOptions": {
-      "module": "commonjs",
+      "module": "ESNext", // "commonjs",
       "esModuleInterop": true,
       "target": "es6",
       "moduleResolution": "node",
