Create users routers

--- a/.env.sample
+++ b/.env.sample
@@ -1,4 +1,6 @@
 PORT=PORT
 URLDB=URLDB
-DBNAME =DNNAME
-COLLECTIONNAME =COLLECTIONNAME
+DBNAMEMOVIE=DNNAMEMOVIE
+DBNAMEUSERS=DNNAMEUSERS
+COLLECTIONNAMEMOVIE=COLLECTIONNAME
+COLLECTIONNAMEUSER=COLLECTIONNAME
