change for https

--- a/.env.sample
+++ b/.env.sample
@@ -4,3 +4,5 @@ DBNAMEMOVIE=DNNAMEMOVIE
 DBNAMEUSERS=DNNAMEUSERS
 COLLECTIONNAMEMOVIE=COLLECTIONNAME
 COLLECTIONNAMEUSER=COLLECTIONNAME
+KEY=KEY
+CRT=CRT
