--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "crypto-js": "^4.2.0",
     "dotenv": "^16.4.5",
     "express": "^4.17.1",
+    "express-rate-limit": "^7.3.1",
     "mongodb": "^6.7.0"
   }
 }
